--- a/package.json
+++ b/package.json
@@ -15,17 +15,22 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@apollo/client": "^3.8.7",
     "autoprefixer": "^10.4.16",
+    "axios": "^1.6.2",
     "gatsby": "^5.12.4",
+    "gatsby-omni-font-loader": "^2.0.2",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-postcss": "^6.12.0",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-source-filesystem": "^5.12.1",
     "gatsby-transformer-sharp": "^5.12.3",
+    "graphql": "^16.8.1",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "tailwindcss": "^3.3.5"
   }
 }
